// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="border dark:border-gray-700 overflow-hidden rounded-xl w-full"
>
  <table
    className="table-auto border-collapse text-xs sm:text-sm md:text-base w-full"
  >
    <thead>
      <tr
        className="[&:last-child>td]:border-b-0 [&:nth-child(even)]:bg-light-200 dark:[&:nth-child(even)]:bg-dark-300"
      >
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          Last Price
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          24h volume
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          Bid
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          Ask
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          Spread
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="[&:last-child>td]:border-b-0 [&:nth-child(even)]:bg-light-200 dark:[&:nth-child(even)]:bg-dark-300"
      >
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          $
          NaN
           (
          <span
            className="text-green"
          >
            +0.00%
          </span>
          )
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          $
          NaN
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          $
          NaN
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          $
          NaN
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          NaN
          %
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`(2) Render with loading 1`] = `
<div
  className="border dark:border-gray-700 overflow-hidden rounded-xl w-full"
>
  <table
    className="table-auto border-collapse text-xs sm:text-sm md:text-base w-full"
  >
    <thead>
      <tr
        className="[&:last-child>td]:border-b-0 [&:nth-child(even)]:bg-light-200 dark:[&:nth-child(even)]:bg-dark-300"
      >
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </th>
        <th
          className="border-b dark:border-gray-700 text-left font-[500] bg-gray-100 dark:bg-dark-200 text-gray-700 dark:text-white border-r last:border-r-0 text-xs sm:text-sm md:text-base p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="[&:last-child>td]:border-b-0 [&:nth-child(even)]:bg-light-200 dark:[&:nth-child(even)]:bg-dark-300"
      >
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </td>
        <td
          className="border-b border-r dark:border-gray-700 last:border-r-0 p-1 sm:p-2 "
        >
          <div
            className="skeleton skeleton-loading mr-5"
          />
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
